--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -54,6 +54,9 @@
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 4 and Part 5</p>
 <p>完成上述流程整理後, 請將 HW3 自評分數輸入 cp2024 自評表單中.</p>
 <h3>w8</h3>
+<p><span>開啟 coppeliaSim.exe 及 start_ipv6.bat</span></p>
+<p><span>將put_cubes_into_scene_1.py開啟到可攜程式，點擊Tools - Go</span></p>
+<p><span>coppeliaSim.exe就會執行出模擬場景</span></p>
 <p><img alt="" height="544" src="/images/螢幕擷取畫面 2024-10-16 113520.png" width="800"/></p><h2>HW 3 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p><h1>HW 4</h1>
