--- a/content/w10.html
+++ b/content/w10.html
@@ -143,7 +143,83 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w10</h1>
 <p>題目一</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/7lVLgnbJCkU?si=iNll6hSiSkRnbTFJ" title="YouTube video player" width="560"></iframe></p><br />w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+<p><span>操作:</span></p>
+<p><span> Brython </span></p>
+<p><span>1.複製程式一的原始碼</span></p>
+<p><span> 2.到個人網站的Brython</span></p>
+<p><span> 3.清除輸出區 </span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span> 5.Run </span></p>
+<p><span>SciTE 編輯器</span></p>
+<p><span> 1.開啟SciTE 編輯器 </span></p>
+<p><span>2.儲存檔案</span></p>
+<p><span> 3.貼上程式一的原始碼</span></p>
+<p><span> 4.Tool--Go </span></p>
+<p><span>命令提示字元視窗</span></p>
+<p><span> 1.開啟命令提示字元視窗</span></p>
+<p><span> 2.輸入cmd </span></p>
+<p><span>3.輸入python </span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span> Jupyter Lab </span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span> 2.輸入cd notebook </span></p>
+<p><span>3.輸入jupyter lab --collaborative</span></p>
+<p><span> 4.進入Jupyter Lab網頁 </span></p>
+<p><span>5.建立new launcher </span></p>
+<p><span>6.貼上程式一的原始碼 </span></p>
+<p><span>7.執行 </span></p>
+<p><span>Codespaces </span></p>
+<p><span>1.新增檔案 /檔案名稱.py</span></p>
+<p><span> 2.安裝python模組 </span></p>
+<p><span>3.新增終端機 </span></p>
+<p><span>4.貼上程式一的原始碼 </span></p>
+<p><span>5.輸入python exam.py </span></p>
+<p><span>6.執行 </span></p>
+<p><span>心得: </span></p>
+<p><span>利用這次測驗，我學到5種不同工具寫程式的方法，所以如果其中一種不能使用，還是有很多其他的工具可以用，其中我發現在Codespaces新增檔案時，檔案命名的最後沒有加.py，會導致程式無法執行。</span></p>
+<p><span>操作影片如下:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/7lVLgnbJCkU?si=iNll6hSiSkRnbTFJ" title="YouTube video player" width="560"></iframe></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span>題目二</span></p>
+<div><span>請問 Python 程式中有關變數的命名, 除了必須以"_", 以及英文大小寫字母開頭之外, 還有甚麼需要特別注意的地方?</span></div>
+<div><span>與所謂的"關鍵字"(</span><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5705fc2a67aa1db0c0d44d6d0478b08b/raw/9d7d4227cc13cdad06544e3960c90a1adfb5c388/python_keywords.py">Keywords</a><span>)有關係嗎?</span></div>
+<div>Answer:</div>
+<div>1.不可以用數字開頭，變數名稱的第一個字母必須是大小寫英文字母 。</div>
+<div>2.變數名稱不能與Python關鍵字或函式名稱相同。<span>關鍵</span><span>字如print、def、if、else、for 等等，原本就是在Python中會被使用到的，不能被拿來作為變數的名稱。</span></div>
+<div><span></span></div>
+<div><span>請實際舉例, 針對 Python 程式命名的規則編寫程式, 並採上一題的五種程式執行方法, 展示正確變數命名與違反變數命名時, 所顯示的錯誤訊息回應.</span></div>
+<div><span></span></div>
+<div><span></span></div>
+<div><span>操作影片如下:</span></div>
+<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/v6ITtptrX9c?si=yvs2glPDtnJ5cR3F" title="YouTube video player" width="560"></iframe></span></p>
+<p><span>題目三</span></p>
+<div><span>解題流程: </span></div>
+<div><span>利用 Python 程式解決物理問題 </span></div>
+<div><span>A jet touches down at velocity 310 km/h. Find the constant acceleration required to stop the aircraft 1000 m down the runway.</span></div>
+<div><span> 解:</span></div>
+<div><span> 1.先給定值 </span></div>
+<div><span>2.利用方程式 v^2 = v0^2 + 2ad 求解加速度 (a)</span></div>
+<div><span> 3.最後得到答案:所需的恆定加速度為-3.71 m/s²。 </span></div>
+<div><span></span></div>
+<div><span> 利用 Python 程式解決微積分問題 </span></div>
+<div><span>Under ideal conditions a certain bacteria population is known to double every three hours. Suppose that there are initially 100 bacteria. When will the population first reach 50,000 ?</span></div>
+<div><span> 解: </span></div>
+<div><span>1.導入數學 </span></div>
+<div><span>2.先給定值 </span></div>
+<div><span>3.計算人口達到P_target的時間 方程式: t = T * math.log(P_target / P0, 2)</span></div>
+<div><span> 3.最後得到答案:26.90後人口將首次達到50000。 </span></div>
+<div><span></span></div>
+<div><span> 心得:</span></div>
+<div><span></span></div>
+<div>利用python來算物理及微積分的問題，只要將題目所給的資訊及方程式，輸入給python，就能夠得到答案非常方便，但這個前提是要有公式，才能解題，之後我希望可以學到如何用python證明公式是正確的。</div>
+<div></div>
+<div></div>
+<div><span>操作影片如下:</span></div>
+<div></div>
+<div><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ryXMIrtv9cY?si=uOGlVHKddnYZLlyR" title="YouTube video player" width="560"></iframe></div>
+<div></div>
+<div></div><br />w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
