--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -91,6 +91,7 @@
 <div><span></span></div>
 <div><span>請實際舉例, 針對 Python 程式命名的規則編寫程式, 並採上一題的五種程式執行方法, 展示正確變數命名與違反變數命名時, 所顯示的錯誤訊息回應.</span></div>
 <div><span></span></div>
+<div><span></span></div>
 <div><span>操作影片如下:</span></div>
 <p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/v6ITtptrX9c?si=yvs2glPDtnJ5cR3F" title="YouTube video player" width="560"></iframe></span></p>
 <p><span>題目三</span></p>
@@ -110,12 +111,19 @@
 <div><span>3.計算人口達到P_target的時間 方程式: t = T * math.log(P_target / P0, 2)</span></div>
 <div><span> 3.最後得到答案:26.90後人口將首次達到50000。 </span></div>
 <div><span></span></div>
-<div><span> 心得: </span></div>
+<div><span> 心得:</span></div>
+<div><span></span></div>
 <div>利用python來算物理及微積分的問題，只要將題目所給的資訊及方程式，輸入給python，就能夠得到答案非常方便，但這個前提是要有公式，才能解題，之後我希望可以學到如何用python證明公式是正確的。</div>
+<div></div>
 <div></div>
 <div><span>操作影片如下:</span></div>
 <div></div>
 <div><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ryXMIrtv9cY?si=uOGlVHKddnYZLlyR" title="YouTube video player" width="560"></iframe></div>
+<h3>w11</h3>
+<p><span>題目一 </span><span>請將此程式延伸到可以在 10x10 的字元區域中, 以 "*" 字元列印出圓型區域. 完成後請將程式碼存入個人 Gist 後, 直接在個人作業網站中的 Brython 頁面中執行. (提示: ?src=gist_script_URL)</span></p>
+<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/t2XCfFZqARI?si=qhhYbcYlakHJ0MVN" title="YouTube video player" width="560"></iframe></span></p>
+<p><span>心得:</span></p>
+<p><span>這次作業我發現給gpt一個正確的關鍵字非常重要，前面好幾次我做出來的圓都是不規則形狀的，後來發現是*的字形必須是全形才能做出一個完整的圓。</span></p>
 <div></div>
 <div></div><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
