--- a/content/w11.html
+++ b/content/w11.html
@@ -157,7 +157,11 @@ img.add_border {
 <div>
 <p><span>心得:</span></p>
 <p><span>這次作業我發現給gpt一個正確的關鍵字非常重要，前面好幾次我做出來的圓都是不規則形狀的，後來發現是*的字形必須是全形才能做出一個完整的圓。</span></p>
-</div>
+<p><span></span></p>
+<p><span>3.</span></p>
+<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/6460a0203b0b39e7c7fe691110a0d6162f49581f/w11-3.py">11/27程式1</a></div>
+<div></div>
+<div><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/e22aa724394fd79c1da76e3b316dd2a7b22af4f7/w11-4.py">11/27程式2</a></div>
 <div></div><br />w10 << <a href='w10.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
