--- a/content/w12.html
+++ b/content/w12.html
@@ -150,38 +150,38 @@ img.add_border {
 <p></p>
 <p>02</p>
 <p><span>字串:以成對的引號來呈現，單引號、雙引號 、三個單引號、三個雙引號都可以拿來表示字串，代表文字的意思</span></p>
-<p><span>範例:</span><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/071c95c7a71100d254eebcc0ed01e5ac84dfb08f/w12-02-1.py">姓氏 名字</a></p>
-<h4 class="wp-block-heading">兩個字串相加使用<span> </span><code>+</code></h4>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/071c95c7a71100d254eebcc0ed01e5ac84dfb08f/w12-02-2.py">姓名+最喜歡的食物</a></h4>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/071c95c7a71100d254eebcc0ed01e5ac84dfb08f/w12-02-1.py">姓氏 名字</a></p>
+<p>兩個字串相加使用+</p>
+<p>範例:<code><span></span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/071c95c7a71100d254eebcc0ed01e5ac84dfb08f/w12-02-2.py">姓名+最喜歡的食物</a></p>
 <p></p>
 <p>03</p>
 <p>if... in.../else...:判斷輸入的文字有沒有在字串內</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/c83426dc22209d261ca4f45e5ba92d8ba3890c8b/w12-03.py">買書</a></h4>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/c83426dc22209d261ca4f45e5ba92d8ba3890c8b/w12-03.py">買書</a></p>
 <p></p>
 <p>04</p>
 <p>.append()/.remove():在清單內增加或刪除項目</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/c83426dc22209d261ca4f45e5ba92d8ba3890c8b/w12-04.py">購物清單</a></h4>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/c83426dc22209d261ca4f45e5ba92d8ba3890c8b/w12-04.py">購物清單</a></p>
 <p></p>
 <p>05</p>
 <p><span>.index() :可以用來搜尋字串中指定字元的位置，它會回傳第一個符合條件的字元的索引值</span></p>
 <p><span>.pop():移除並傳回集合中的任意元素</span></p>
 <p><span>.insert():將一個項目插入至 list 中給定的位置</span></p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/132d52dffb7589ad64a9c535c8ea0d810ba81e91/w12-05.py">今日菜單</a></h4>
+<p><span>範例:</span><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/132d52dffb7589ad64a9c535c8ea0d810ba81e91/w12-05.py">今日菜單</a></p>
 <p></p>
 <p>06</p>
 <p><span>[</span><span>start</span><span>:</span><span>stop</span><span>:</span><span>step</span><span>]</span></p>
-<h4><strong>start（起始索引）</strong>：切片開始的位置，默認為 0。</h4>
-<h4><strong>stop（結束索引）</strong>：切片結束的位置（不包含該索引位置的元素）。</h4>
-<h4><strong>step（步長）</strong>：每次跳過的元素數量，默認為 1。</h4>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/132d52dffb7589ad64a9c535c8ea0d810ba81e91/w12-06.py">環遊世界</a></h4>
+<p>start(起始索引):切片開始的位置，默認為0</p>
+<p>stop(結束<span>索引</span>):<span>切片結束的位置(不包含該索引位置的元素)</span></p>
+<p><span>step(步長):每次跳過的元素數量，默認為1</span></p>
+<p><span>範例:</span><strong></strong><code><span></span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/132d52dffb7589ad64a9c535c8ea0d810ba81e91/w12-06.py">環遊世界</a></p>
 <p></p>
 <p>07</p>
-<p><strong>索引修改</strong>：使用單一索引修改清單中的某個元素（如<span> </span><code>senses[1]</code>）</p>
-<p><strong>分片替換</strong>：用切片語法（如<span> </span><code>senses[3:5]</code>）修改一段區間的元素</p>
-<p><strong>帶步長的切片修改</strong>：通過步長語法（如<span> </span><code>senses[0:3:2]</code>）選擇非連續的元素進行替換</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-1.py">感官</a></h4>
-<p><code>1.[:5]</code>：取出索引 0 到 4 的元素</p>
-<p>2.<code>[5:]</code>：取出索引 5 之後的元素</p>
+<p>索引修改:使用單一索引修改清單中的某個元素（如<span> </span><code>senses[1]</code>）</p>
+<p>分片替換:用切片語法（如<span> </span><code>senses[3:5]</code>）修改一段區間的元素</p>
+<p>帶步長的切片修改:通過步長語法（如<span> </span><code>senses[0:3:2]</code>）選擇非連續的元素進行替換</p>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-1.py">感官</a></p>
+<p>1.[:5]:取出索引 0 到 4 的元素</p>
+<p>2.<span>[:5]:</span>取出索引 5 之後的元素</p>
 <h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-2.py">行星</a></h4>
 <p><strong><code>del</code> 語句</strong>：</p>
 <p>刪除清單中的元素，或刪除整個清單</p>
