w11及w12二次修改標題

--- a/config/content.htm
+++ b/config/content.htm
@@ -119,7 +119,7 @@
 <div><span>操作影片如下:</span></div>
 <div></div>
 <div><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ryXMIrtv9cY?si=uOGlVHKddnYZLlyR" title="YouTube video player" width="560"></iframe></div>
-<h3>w11</h3>
+<h3>w11_hw</h3>
 <p><span>題目一 </span><span>請將此程式延伸到可以在 10x10 的字元區域中, 以 "*" 字元列印出圓型區域. 完成後請將程式碼存入個人 Gist 後, 直接在個人作業網站中的 Brython 頁面中執行. (提示: ?src=gist_script_URL)</span></p>
 <p><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/d63a0ccfc5107f3f5ee7886a36bf81343652eb45/w11.py">第1題的Brython頁面</a></p>
 <p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/t2XCfFZqARI?si=qhhYbcYlakHJ0MVN" title="YouTube video player" width="560"></iframe></span></p>
@@ -140,7 +140,7 @@
 <a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/6460a0203b0b39e7c7fe691110a0d6162f49581f/w11-3.py">11/27程式1</a></div>
 <div></div>
 <div><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/d52c6488cab1cd3cf814c3e4c19319bc/raw/e22aa724394fd79c1da76e3b316dd2a7b22af4f7/w11-4.py">11/27程式2</a></div>
-<div></div><h3>w12</h3>
+<div></div><h3>w12_hw</h3>
 <p>01</p>
 <p><span>input():會讓程式暫停，等待使用者輸入一些文字，python在取得使用者輸入文字後，會把輸入的文字存到一個變數內</span></p>
 <p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/dfae8bc65f042eb24bfc6981e5317452d9550056/w12-01-1.py">input("What's your favorite color?")</a></p>
