--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -181,7 +181,7 @@
 <p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-1.py">感官</a></p>
 <p>1.[:5]:取出索引 0 到 4 的元素</p>
 <p>2.<span>[:5]:</span>取出索引 5 之後的元素</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-2.py">行星</a></h4>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-2.py">行星</a></p>
 <p><strong><code>del</code> 語句</strong>：</p>
 <p>刪除清單中的元素，或刪除整個清單</p>
 <p>使用單一索引（如 <code>del house[1]</code>）刪除特定位置的元素</p>
@@ -192,6 +192,7 @@
 <p></p>
 <p></p><h3>w13_hw</h3>
 <p>1.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/9f17932f49ca2f3811bdbd379ac161283a0fec00/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
+<div id="brython_div1">2.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/821ee6f0f80d56e73815636fcfcb1bcf618aa1bb/w13-2.py">加上外切圓</a></div>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="/static/brython.js"></script>
@@ -238,7 +239,6 @@ ctx.stroke()
 ctx.strokeStyle = 'black'  # 設定圓的顏色為黑色
 </script>
 </p>
-<div id="brython_div1">2.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/821ee6f0f80d56e73815636fcfcb1bcf618aa1bb/w13-2.py">加上外切圓</a></div>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="/static/brython.js"></script>
