--- a/config/content.htm
+++ b/config/content.htm
@@ -181,13 +181,13 @@
 <p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-1.py">感官</a></p>
 <p>1.[:5]:取出索引 0 到 4 的元素</p>
 <p>2.<span>[:5]:</span>取出索引 5 之後的元素</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-2.py">行星</a></h4>
-<p><strong><code>del</code> 語句</strong>：</p>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-2.py">行星</a></p>
+<p>del<strong>語句</strong>：</p>
 <p>刪除清單中的元素，或刪除整個清單</p>
 <p>使用單一索引（如 <code>del house[1]</code>）刪除特定位置的元素</p>
 <p>使用切片語法（如 <code>del house[4:6]</code> 或 <code>del house[::2]</code>）刪除多個元素</p>
 <p>直接對變數使用 <code>del</code>（如 <code>del house</code>），會刪除變數本身</p>
-<h4 class="wp-block-heading"><code><span>範例:</span></code><a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-3.py">房子</a></h4>
+<p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-3.py">房子</a></p>
 <p><strong><code></code></strong></p>
 <p></p>
 <p></p><h3>w13_hw</h3>
