--- a/content/w12_hw.html
+++ b/content/w12_hw.html
@@ -189,8 +189,8 @@ img.add_border {
 <p>使用切片語法（如 <code>del house[4:6]</code> 或 <code>del house[::2]</code>）刪除多個元素</p>
 <p>直接對變數使用 <code>del</code>（如 <code>del house</code>），會刪除變數本身</p>
 <p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-3.py">房子</a></p>
-<p><strong><code></code></strong></p>
 <p></p>
+<p>心得:上面的python範例對於我來說，比較好用的應該是範例4的<span>.append()/.remove()，這兩個就很好用，像是批發商需要買很多種的物品，如果突然要新增或刪除其中一項清單，那麼.append()/.remove()就可以派上用場了。</span></p>
 <p></p><br />w11_hw << <a href='w11_hw.html'>Previous</a> <a href='w13_hw.html'>Next</a> >> w13_hw</div>
         
     <!-- footer -->
