--- a/config/content.htm
+++ b/config/content.htm
@@ -188,8 +188,8 @@
 <p>使用切片語法（如 <code>del house[4:6]</code> 或 <code>del house[::2]</code>）刪除多個元素</p>
 <p>直接對變數使用 <code>del</code>（如 <code>del house</code>），會刪除變數本身</p>
 <p>範例:<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/2386fa2acc5338cb55f9ad5c76a9b4b2/raw/80fd690299356d2f0f08edc20573dd80da9cdf46/w12-07-3.py">房子</a></p>
-<p><strong><code></code></strong></p>
 <p></p>
+<p>心得:上面的python範例對於我來說，比較好用的應該是範例4的<span>.append()/.remove()，這兩個就很好用，像是批發商需要買很多種的物品，如果突然要新增或刪除其中一項清單，那麼.append()/.remove()就可以派上用場了。</span></p>
 <p></p><h3>w13_hw</h3>
 <p>1.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/9f17932f49ca2f3811bdbd379ac161283a0fec00/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
 <div id="brython_div1">2.<a href="https://mdecp2024.github.io/hw-41323203/content/Brython.html?src=https://gist.githubusercontent.com/41323203/9b50361812af9dd5e1ac7cf498d40eea/raw/821ee6f0f80d56e73815636fcfcb1bcf618aa1bb/w13-2.py">加上外切圓</a></div>
